docs: add GC and CPU monitoring documentation
- Update README.md with new features and API endpoints
- Add GC/CPU configuration options to docs/configuration.md
- Add metrics demo instructions to docs/getting-started.md

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>